kubernetes/agent-namespace.yaml
{
  "apiVersion": "v1",
  "kind": "Namespace",
  "metadata": {
    "name": "gitlab-agent",
    "labels": {
      "name": "gitlab-agent"
    }
  }
}
