kubernetes/k8-setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: <NAMESPACE>
  labels:
    name: <NAMESPACE>
