kubernetes/static-volume-cleanup.yaml
apiVersion: v1
kind: Pod
metadata:
  name: static-volume-cleanup-pod
spec:
  containers:
  - name: static-volume-pvc-cleanup
    image: ghcr.io/rnacentral/nginx:1.25-alpine
    command: ["/bin/sh", "-c", "rm -rf /srv/rnacentral/static/*"]
    volumeMounts:
    - name: static-volume
      mountPath: /srv/rnacentral/static
    securityContext:
      runAsUser: 0
  volumes:
  - name: static-volume
    persistentVolumeClaim:
      claimName: static-volume
  restartPolicy: Never
