kubernetes/rnacentral-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: rnacentral
  labels:
    app: rnacentral
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: rnacentral-webcode
  selector:
    app: rnacentral
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  ports:
  - port: 8000
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: rnacentral
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rnacentral
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rnacentral
  template:
    metadata:
      labels:
        app: rnacentral
    spec:
      containers:
      - image: rnacentral/rnacentral-webcode:python3.7
        name: rnacentral
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "1536Mi"
            cpu: "250m"
          limits:
            memory: "3072Mi"
            cpu: "500m"
        volumeMounts:
          - name: static-volume
            mountPath: /srv/rnacentral/static
      - image: nginx:1.17-alpine
        name: nginx
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
        ports:
          - containerPort: 80
        volumeMounts:
          - name: nginx-config
            mountPath: /etc/nginx/conf.d/local.conf
            subPath: local.conf
          - name: static-volume
            mountPath: /srv/rnacentral/static
      restartPolicy: Always
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: static-volume
          persistentVolumeClaim:
            claimName: static-volume
