kubernetes/rnacentral.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  ports:
  - port: 8000
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: rnacentral
---
apiVersion: v1
kind: Service
metadata:
  name: rnacentral
  labels:
    app: rnacentral
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: rnacentral-webcode
  selector:
    app: rnacentral
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  ports:
  - port: 8051
    protocol: TCP
    targetPort: 8051
    name: redis-8051
  selector:
    app: rnacentral
---
apiVersion: v1
kind: Service
metadata:
  name: memcached
  labels:
    app: memcached
spec:
  ports:
  - port: 8052
    protocol: TCP
    targetPort: 8052
    name: memcached-8052
  selector:
    app: rnacentral
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rnacentral
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rnacentral
  template:
    metadata:
      labels:
        app: rnacentral
    spec:
      containers:
      - image: rnacentral/rnacentral-webcode:python3.7
        name: rnacentral
        ports:
        - containerPort: 8000
        volumeMounts:
          - name: static-volume
            mountPath: /srv/rnacentral/static
      - image: nginx:1.17-alpine
        name: nginx
        ports:
          - containerPort: 80
        volumeMounts:
          - name: nginx-config
            mountPath: /etc/nginx/conf.d/local.conf
            subPath: local.conf
          - name: static-volume
            mountPath: /srv/rnacentral/static
      - image: memcached:1.6.7-alpine
        name: memcached
        args:
        - '-m 512 -p 8052'
        ports:
          - containerPort: 8052
      - image: redis:6.0.8-alpine
        name: redis
        args:
        - '--port 8051'
        ports:
          - containerPort: 8051
      restartPolicy: Always
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: static-volume
          persistentVolumeClaim:
            claimName: static-volume
